--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,5 @@
   "display": "standalone",
   "background_color": "#f0f2f5",
   "theme_color": "#f0f2f5",
-  "description": "A squat counter and form analyzer using your webcam.",
-  "icons": [
-    {
-      "src": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_120x44dp.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_120x44dp.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "description": "A squat counter and form analyzer using your webcam."
 }
