--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,16 @@
   "description": "A squat counter and form analyzer using your webcam.",
   "icons": [
     {
+      "src": "app-icon.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
       "src": "favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
